--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
 name = "gcp-access-token"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-futures = "0.1"
 env_logger = "0.6"
 failure = "0.1.5"
-hyper = "0.12"
-hyper-tls = "0.3"
 serde_json = "1.0"
-tokio = "0.1"
-yup-oauth2 = "3.0.1-beta"
+tokio = { version = "0.2.13", features = ["macros"] }
+yup-oauth2 = "4.0.2"
